added svn commit for comment

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -118,8 +118,11 @@
             <% end %>
         <% end %>
     <% else %>
-        <div class="panel panel-info">
-          Bitte einloggen
+        <div class="panel panel-info text-center">
+          <br/>
+          <i class="fa fa-warning"></i> Bitte einloggen
+          <br/>
+          <br/>
         </div>
     <% end %>
   </div>
