--- a/app/views/courses/students/index.html.erb
+++ b/app/views/courses/students/index.html.erb
@@ -33,7 +33,7 @@
                 <td>
                   <div class="btn-group">
                     <%= link_to 'javascript:void(0);', remote: true, class: 'btn btn-primary btn-sm' do %>
-                        <i class="fa fa-bar-chart"></i>
+                        <i class="fa fa-info"></i>
                     <% end %>
                     <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
                       <span class="caret"></span>
