--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -8,7 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Softlang</a>
+      <%= link_to root_url, class: 'navbar-brand' do %>
+        Softlang
+      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,7 +20,7 @@
         <% if user_signed_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-cogs"></i>
+                <%= current_user.email %>
                 <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="#">Profil</a></li>
