--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -49,35 +49,37 @@
                         <%= link_to 'javascript:void(0);', remote: true, id: "course_#{course.id}_students", class: 'btn btn-primary btn-sm' do %>
                             <i class="fa fa-users"></i>
                         <% end %>
-                        <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
+                        <button type="button" class="btn btn-primary btn-sm dropdown-toggle <%= current_user.email == 'erwinschens@uni-koblenz.de' ? '' : 'disabled' %>" data-toggle="dropdown">
                           <span class="caret"></span>
                           <span class="sr-only">Toggle Dropdown</span>
                         </button>
-                        <ul class="dropdown-menu" role="menu">
-                          <li>
-                            <%= link_to 'javascript:void(0);', remote: true, id: "edit_course_#{course.id}" do %>
-                                <i class="fa fa-edit"></i>
-                                Kurs bearbeiten
-                            <% end %>
-                          </li>
-                          <li>
-                            <%= link_to 'javascript:void(0)',id: "add_assignment_to_course_#{course.id}" do %>
-                                <i class="fa fa-file-code-o"></i>
-                                Aufgabe hinzufügen
-                            <% end %>
-                          </li>
-                          <li>
-                            <%= link_to 'javascript:void(0)', id: "students_via_svn_for_course_#{course.id}", remote: true do %>
-                                <i class="fa fa-plus"></i> Studenten initialisieren
-                            <% end %>
-                          </li>
-                          <li class="divider"></li>
-                          <li>
-                            <%= link_to course_url(course), method: :delete, remote: true do %>
-                                <i class="fa fa-trash-o"></i> Kurs löschen
-                            <% end %>
-                          </li>
-                        </ul>
+                        <% if current_user.email == 'erwinschens@uni-koblenz.de' %>
+                            <ul class="dropdown-menu" role="menu">
+                              <li>
+                                <%= link_to 'javascript:void(0);', remote: true, id: "edit_course_#{course.id}" do %>
+                                    <i class="fa fa-edit"></i>
+                                    Kurs bearbeiten
+                                <% end %>
+                              </li>
+                              <li>
+                                <%= link_to 'javascript:void(0)', id: "add_assignment_to_course_#{course.id}" do %>
+                                    <i class="fa fa-file-code-o"></i>
+                                    Aufgabe hinzufügen
+                                <% end %>
+                              </li>
+                              <li>
+                                <%= link_to 'javascript:void(0)', id: "students_via_svn_for_course_#{course.id}", remote: true do %>
+                                    <i class="fa fa-plus"></i> Studenten initialisieren
+                                <% end %>
+                              </li>
+                              <li class="divider"></li>
+                              <li>
+                                <%= link_to course_url(course), method: :delete, remote: true do %>
+                                    <i class="fa fa-trash-o"></i> Kurs löschen
+                                <% end %>
+                              </li>
+                            </ul>
+                        <% end %>
                       </div>
                     </td>
                   </tr>
@@ -104,9 +106,9 @@
                               })
                           });
 
-                          $('#add_assignment_to_course_<%= course.id %>').on('click', function(){
+                          $('#add_assignment_to_course_<%= course.id %>').on('click', function () {
                               loadSpinner($targetPanel, {type: 'panel'});
-                              ajaxTab($targetPanel,'<%= new_course_assignment_url(course) %>', 'Error');
+                              ajaxTab($targetPanel, '<%= new_course_assignment_url(course) %>', 'Error');
                           });
                       })
                   </script>
