--- a/app/views/courses/students/assignments/partials/_form.html.erb
+++ b/app/views/courses/students/assignments/partials/_form.html.erb
@@ -1,3 +1,6 @@
+<div class="well">
+  <%= link_to 'SVN Link zum Assignment', "#{course.svn_url}/#{student.username}/solutions/#{assignment.order}", target: '_blank' %>
+</div>
 <%= form_tag course_student_assignment_url(course, student, assignment), method: :patch, remote: true, class: 'form-horizontal' do %>
     <div class="form-group">
       <%= label_tag :public_tests, 'PublicTests', class: 'col-sm-2 control-label' %>
@@ -16,9 +19,15 @@
       </div>
     </div>
     <div class="form-group">
-      <%= label_tag :achieved_points, 'Bewerten mit', class: 'col-sm-2 control-label' %>
+      <%= label_tag :achieved_points, 'Bewertung Hausaufgabe', class: 'col-sm-2 control-label' %>
       <div class="col-sm-2">
         <%= number_field_tag :achieved_points, achieved_points, class: 'form-control', min: 0 %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= label_tag :achieved_points_programming, 'Bewertung Programmieraufgabe', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-2">
+        <%= number_field_tag :achieved_points_programming, achieved_points_programming, class: 'form-control', min: 0 %>
       </div>
     </div>
     <div class="form-group">
