added quick corrector

--- a/app/views/courses/students/assignments/edit.html.erb
+++ b/app/views/courses/students/assignments/edit.html.erb
@@ -14,4 +14,4 @@
   </li>
   <li class="active">Aufgabe bewerten</li>
 </ol>
-<%= render partial: 'courses/students/assignments/partials/form', locals: {course: @course, assignment: @assignment, student: @student, achieved_points: @achieved_points,achieved_points_programming: @achieved_points_programming, extra_test: @extra_test, public_test: @public_test} %>
+<%= render partial: 'courses/students/assignments/partials/form', locals: {course: @course, assignment: @assignment, student: @student, achieved_points: @achieved_points,achieved_points_programming: @achieved_points_programming, extra_test: @extra_test, public_test: @public_test, encoding: @encoding} %>
