--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 
 <!-- Modal -->
 <div class="modal fade" id="modal_dialog" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content" id="modal_dialog_content">
       <!-- AJAX Loading -->
     </div>
   </div>
