--- a/app/views/courses/students/assignments/partials/_form.html.erb
+++ b/app/views/courses/students/assignments/partials/_form.html.erb
@@ -3,18 +3,26 @@
 </div>
 <%= form_tag course_student_assignment_url(course, student, assignment), method: :patch, remote: true, class: 'form-horizontal' do %>
     <div class="form-group">
+      <%= label_tag :encoding, 'Encoding', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-2">
+        <span class="label label-<%= encoding ? 'success' : 'danger' %>">
+          <%= encoding ? 'Erfolgreich' : 'Nicht Erfolgreich' %>
+        </span>
+      </div>
+    </div>
+    <div class="form-group">
       <%= label_tag :public_tests, 'PublicTests', class: 'col-sm-2 control-label' %>
       <div class="col-sm-2">
-        <span class="label label-<%= @public_test ? 'success' : 'danger' %>">
-          <%= @public_test ? 'Erfolgreich' : 'Nicht Erfolgreich' %>
+        <span class="label label-<%= public_test ? 'success' : 'danger' %>">
+          <%= public_test ? 'Erfolgreich' : 'Nicht Erfolgreich' %>
         </span>
       </div>
     </div>
     <div class="form-group">
       <%= label_tag :extra_test, 'ExtraTests', class: 'col-sm-2 control-label' %>
       <div class="col-sm-2">
-        <span class="label label-<%= @extra_test ? 'success' : 'danger' %>">
-            <%= @extra_test ? 'Erfolgreich' : 'Nicht Erfolgreich' %>
+        <span class="label label-<%= extra_test ? 'success' : 'danger' %>">
+            <%= extra_test ? 'Erfolgreich' : 'Nicht Erfolgreich' %>
         </span>
       </div>
     </div>
