--- a/app/views/courses/students/assignments/partials/_form.html.erb
+++ b/app/views/courses/students/assignments/partials/_form.html.erb
@@ -41,7 +41,7 @@
     <div class="form-group">
       <%= label_tag :comment, 'Kommentar', class: 'col-sm-2 control-label' %>
       <div class="col-sm-6">
-        <%= text_area_tag :comment, '', class: 'form-control', rows: 5 %>
+        <%= text_area_tag :comment, comment_content(student, assignment), class: 'form-control', rows: 5 %>
       </div>
     </div>
     <div class="form-group">
