--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -49,11 +49,11 @@
                         <%= link_to 'javascript:void(0);', remote: true, id: "course_#{course.id}_students", class: 'btn btn-primary btn-sm' do %>
                             <i class="fa fa-users"></i>
                         <% end %>
-                        <button type="button" class="btn btn-primary btn-sm dropdown-toggle <%= current_user.email == 'erwinschens@uni-koblenz.de' ? '' : 'disabled' %>" data-toggle="dropdown">
+                        <button type="button" class="btn btn-primary btn-sm dropdown-toggle <%= (current_user.has_role? :admin) ? '' : 'disabled' %>" data-toggle="dropdown">
                           <span class="caret"></span>
                           <span class="sr-only">Toggle Dropdown</span>
                         </button>
-                        <% if current_user.email == 'erwinschens@uni-koblenz.de' %>
+                        <% if current_user.has_role? :admin %>
                             <ul class="dropdown-menu" role="menu">
                               <li>
                                 <%= link_to 'javascript:void(0);', remote: true, id: "edit_course_#{course.id}" do %>
