--- a/app/views/courses/assignments/tests/partials/_results.html.erb
+++ b/app/views/courses/assignments/tests/partials/_results.html.erb
@@ -1,68 +1,75 @@
-<h1>Statistiken</h1>
-
-<div class="row">
-  <div class="col-sm-3">
-    PublicTests durchgelaufen: <%= tests_success(current_user.students, @assignment) %> <br/>
-    PublicTests failed: <%= tests_failed(current_user.students, @assignment) %> <br/>
-    ExtraTests durchgelaufen: <%= tests_success(current_user.students, @assignment, false) %> <br/>
-    ExtraTests fehlgeschlagen: <%= tests_failed(current_user.students, @assignment, false) %>
-  </div>
-  <div class="col-sm-9">
-    <div id="chart_assignment_<%= @assignment.id %>" style="height: 300px"></div>
-  </div>
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal">
+    <span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+  <h4 class="modal-title">Statistiken</h4>
 </div>
+<div class="modal-body">
 
-<hr/>
+  <div class="row">
+    <div class="col-sm-3">
+      PublicTests durchgelaufen: <%= tests_success(current_user.students, @assignment) %> <br/>
+      PublicTests failed: <%= tests_failed(current_user.students, @assignment) %> <br/>
+      ExtraTests durchgelaufen: <%= tests_success(current_user.students, @assignment, false) %> <br/>
+      ExtraTests fehlgeschlagen: <%= tests_failed(current_user.students, @assignment, false) %>
+    </div>
+    <div class="col-sm-9">
+      <div id="chart_assignment_<%= @assignment.id %>" style="height: 300px"></div>
+    </div>
+  </div>
 
-<h1>Fast Corrector</h1>
-<div class="row">
-  <div class="col-sm-12">
-    <table class="table table-striped table-hover">
-      <thead>
-      <tr>
-        <th>Name</th>
-        <th>Public</th>
-        <th>Extra</th>
-        <th>Encoding</th>
-        <th>Bewertung</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% current_user.students.each do |student| %>
-          <tr>
-            <td>
-              <%= link_to "#{@course.svn_url}/#{student.username}/solutions/#{@assignment.order}", target: '_blank' do %>
-                  <%= student.username %> <i class="fa fa-database"></i>
-              <% end %>
-            </td>
-            <td>
-              <% if test_status_public_test(student, @assignment) %>
-                  <span class="label label-success">Erfolgreich</span>
-              <% else %>
-                  <span class="label label-danger">Fehlgeschlagen</span>
-              <% end %>
-            </td>
-            <td>
-              <% if test_status_extra_test(student, @assignment) %>
-                  <span class="label label-success">Erfolgreich</span>
-              <% else %>
-                  <span class="label label-danger">Fehlgeschlagen</span>
-              <% end %>
-            </td>
-            <td>
-              <% if test_status_encoding(student, @assignment) %>
-                  <span class="label label-success">Erfolgreich</span>
-              <% else %>
-                  <span class="label label-danger">Fehlgeschlagen</span>
-              <% end %>
-            </td>
-            <td id="result_student_<%= student.id %>_assignment_<%= @assignment.id %>">
-              <%= render 'courses/assignments/tests/partials/comment_column', student: student %>
-            </td>
-          </tr>
-      <% end %>
-      </tbody>
-    </table>
+  <hr/>
+
+  <h1>Fast Corrector</h1>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Public</th>
+          <th>Extra</th>
+          <th>Encoding</th>
+          <th>Bewertung</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% current_user.students.each do |student| %>
+            <tr>
+              <td>
+                <%= link_to "#{@course.svn_url}/#{student.username}/solutions/#{@assignment.order}", target: '_blank' do %>
+                    <%= student.username %> <i class="fa fa-database"></i>
+                <% end %>
+              </td>
+              <td>
+                <% if test_status_public_test(student, @assignment) %>
+                    <span class="label label-success">Erfolgreich</span>
+                <% else %>
+                    <span class="label label-danger">Fehlgeschlagen</span>
+                <% end %>
+              </td>
+              <td>
+                <% if test_status_extra_test(student, @assignment) %>
+                    <span class="label label-success">Erfolgreich</span>
+                <% else %>
+                    <span class="label label-danger">Fehlgeschlagen</span>
+                <% end %>
+              </td>
+              <td>
+                <% if test_status_encoding(student, @assignment) %>
+                    <span class="label label-success">Erfolgreich</span>
+                <% else %>
+                    <span class="label label-danger">Fehlgeschlagen</span>
+                <% end %>
+              </td>
+              <td id="result_student_<%= student.id %>_assignment_<%= @assignment.id %>">
+                <%= render 'courses/assignments/tests/partials/comment_column', student: student %>
+              </td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 <script>
