--- a/app/views/courses/partials/_svn_dropdown.html.erb
+++ b/app/views/courses/partials/_svn_dropdown.html.erb
@@ -1,48 +1,60 @@
-<div class="dropdown">
-  <a href="#" class="<%= course_svn_status_label(course) %>" id="dropdownMenu1" data-toggle="dropdown">
-    <i id="course_<%= course.id %>_status_spinner"></i>
+<% if current_user.has_role? :admin %>
+    <div class="dropdown">
+      <a href="#" class="<%= course_svn_status_label(course) %>" id="dropdownMenu1" data-toggle="dropdown">
+        <i id="course_<%= course.id %>_status_spinner"></i>
                           <span id="course_<%= course.id %>_status_span">
                             <%= course_svn_status_text(course) %>
                           </span>
-    <span class="caret"></span>
-  </a>
+        <span class="caret"></span>
+      </a>
 
-  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-    <% if course.svn_status == 'not_checked_out' %>
-        <li role="presentation">
-          <a role="menuitem" tabindex="-1" href="javascript:void(0);" id="course_<%= course.id %>_checkout_svn">
-            Checkout SVN
-          </a>
-        </li>
-    <% elsif course.svn_status == 'checked_out' %>
-        <li role="presentation">
-          <a role="menuitem" tabindex="-1" href="javascript:void(0);" id="course_<%= course.id %>_update_svn">
-            Update SVN
-          </a>
-        </li>
-    <% end %>
-  </ul>
-</div>
-<script>
-    $(function () {
-        $('#course_<%= course.id %>_checkout_svn').on('click', function () {
-            $('#course_<%= course.id %>_status_spinner').addClass('fa fa-spinner fa-spin');
-            $('#course_<%= course.id %>_status_span').html('Auschecken...');
-            $('#dropdownMenu1').addClass('disabled');
-            $.ajax({
-                url: '<%= course_svn_checkouts_url(course) %>',
-                type: 'PATCH'
+      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+        <% if course.svn_status == 'not_checked_out' %>
+            <li role="presentation">
+              <a role="menuitem" tabindex="-1" href="javascript:void(0);" id="course_<%= course.id %>_checkout_svn">
+                Checkout SVN
+              </a>
+            </li>
+        <% elsif course.svn_status == 'checked_out' %>
+            <li role="presentation">
+              <a role="menuitem" tabindex="-1" href="javascript:void(0);" id="course_<%= course.id %>_update_svn">
+                Update SVN
+              </a>
+            </li>
+        <% end %>
+      </ul>
+    </div>
+    <script>
+        $(function () {
+            $('#course_<%= course.id %>_checkout_svn').on('click', function () {
+                $('#course_<%= course.id %>_status_spinner').addClass('fa fa-spinner fa-spin');
+                $('#course_<%= course.id %>_status_span').html('Auschecken...');
+                $('#dropdownMenu1').addClass('disabled');
+                $.ajax({
+                    url: '<%= course_svn_checkouts_url(course) %>',
+                    type: 'PATCH'
+                });
             });
-        });
 
-        $('#course_<%= course.id %>_update_svn').on('click', function () {
-            $('#course_<%= course.id %>_status_spinner').addClass('fa fa-spinner fa-spin');
-            $('#course_<%= course.id %>_status_span').html('Updating...');
-            $('#dropdownMenu1').addClass('disabled');
-            $.ajax({
-                url: '<%= course_svn_updates_url(course) %>',
-                type: 'PATCH'
-            })
-        });
-    })
-</script>
+            $('#course_<%= course.id %>_update_svn').on('click', function () {
+                $('#course_<%= course.id %>_status_spinner').addClass('fa fa-spinner fa-spin');
+                $('#course_<%= course.id %>_status_span').html('Updating...');
+                $('#dropdownMenu1').addClass('disabled');
+                $.ajax({
+                    url: '<%= course_svn_updates_url(course) %>',
+                    type: 'PATCH'
+                })
+            });
+        })
+    </script>
+<% else %>
+    <div class="dropdown">
+      <a href="#" class="<%= course_svn_status_label(course) %> disabled"  disabled="true" id="dropdownMenu1">
+        <i id="course_<%= course.id %>_status_spinner"></i>
+                          <span id="course_<%= course.id %>_status_span">
+                            <%= course_svn_status_text(course) %>
+                          </span>
+        <span class="caret"></span>
+      </a>
+    </div>
+<% end %>
