--- a/app/views/courses/students/assignments/partials/_form.html.erb
+++ b/app/views/courses/students/assignments/partials/_form.html.erb
@@ -18,12 +18,52 @@
         </span>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-2">
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  PublicTests Console Output
+                </a>
+              </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div class="panel-body">
+                <%= simple_format student_assignment(student, assignment).public_test_exception %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="form-group">
       <%= label_tag :extra_test, 'ExtraTests', class: 'col-sm-2 control-label' %>
       <div class="col-sm-2">
         <span class="label label-<%= extra_test ? 'success' : 'danger' %>">
             <%= extra_test ? 'Erfolgreich' : 'Nicht Erfolgreich' %>
         </span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-2">
+        <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwo">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                  ExtraTests Console Output
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+              <div class="panel-body">
+                <%= simple_format student_assignment(student, assignment).extra_test_exception %>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="form-group">
