--- a/app/views/courses/assignments/tests/partials/_results.html.erb
+++ b/app/views/courses/assignments/tests/partials/_results.html.erb
@@ -38,7 +38,8 @@
             <tr>
               <td>
                 <%= link_to "#{@course.svn_url}/#{student.username}/solutions/#{@assignment.order}", target: '_blank' do %>
-                    <%= student.username %> <i class="fa fa-database"></i> <%= committed_solution(student, @assignment) ? '' : '(Keine Abgabe)' %>
+                    <%= student.username %>
+                    <%= committed_homework(student, @assignment) ? '' : '(Keine PDF)' %>
                 <% end %>
               </td>
               <td>
