added ass09 and some feature request from mmonschau

--- a/app/views/courses/assignments/tests/partials/_comment_column.html.erb
+++ b/app/views/courses/assignments/tests/partials/_comment_column.html.erb
@@ -1,7 +1,7 @@
 <span class="label label-<%= comment_given?(student, @assignment) ? 'success' : 'warning' %>"
       id="span_comment_student_<%= student.id %>_assignment_<%= @assignment.id %>"
       data-toggle="popover"
-      title="Popover title"
+      title="Bewertung"
       data-placement="left"
       data-html="true"
       data-content='<%= render partial: 'courses/assignments/tests/partials/comment_popover', locals: {course: @course, student: student, assignment: @assignment} %>'>Kommentar verfassen</span>
