--- a/app/views/courses/students/assignments/partials/_form.html.erb
+++ b/app/views/courses/students/assignments/partials/_form.html.erb
@@ -87,6 +87,7 @@
     <div class="form-group">
       <div class="col-sm-12">
         <%= submit_tag 'Speichern', class: 'btn btn-primary pull-right', data: {disable_with: 'Speichert...'} %>
+        <button class="btn btn-warning pull-right mr1" type="button" id="back_to_students">Zurück</button>
       </div>
     </div>
 <% end %>
