--- a/app/views/courses/assignments/partials/_form.html.erb
+++ b/app/views/courses/assignments/partials/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="form-group">
       <%= f.label :order, 'Laufende Nummer', class: 'col-sm-2 control-label' %>
       <div class="col-sm-4">
-        <%= f.number_field :order, class: 'form-control', min: 0%>
+        <%= f.text_field :order, class: 'form-control'%>
       </div>
     </div>
     <div class="form-group">
